# hobot_dnn

./: .arclint  .clang-format  README.md  README_cn.md
dnn_benchmark_example/: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
dnn_benchmark_example/config/: hobot_benchmark_config.json  image.list
dnn_benchmark_example/include/: workflow.h
dnn_benchmark_example/include/input/: data_iterator.h  image_list_data_iterator.h  input_data.h
dnn_benchmark_example/include/plugin/: base_plugin.h  input_plugin.h
dnn_benchmark_example/include/utils/: fasterrcnn_kps_output_parser.h  image_utils.h  null_output_parser.h  pc_queue.h  utils.h
dnn_benchmark_example/src/: main.cpp  workflow.cpp
dnn_benchmark_example/src/input/: data_iterator.cpp  image_list_data_iterator.cpp
dnn_benchmark_example/src/plugin/: base_plugin.cpp  input_plugin.cpp
dnn_benchmark_example/src/utils/: fasterrcnn_kps_output_parser.cpp  image_utils.cpp  null_output_parser.cpp  utils.cpp
dnn_node/: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
dnn_node/dnn_node_deps/hobot/dnn/: README.md
dnn_node/dnn_node_deps/hobot/dnn/lib/: libcnn_intf.so.1  libhbmem.so.0  libhbmem.so.0.2.0
dnn_node/dnn_node_deps/hobot/easy_dnn/: README.md
dnn_node/docs/API-Manual/: API-Manual.md
dnn_node/include/dnn_node/: dnn_node.h  dnn_node_data.h  dnn_node_impl.h
dnn_node/include/dnn_node/util/output_parser/: algorithm.h  output_description_parser.h  parsing_output_parser.h  utils.h
dnn_node/include/easy_dnn/: common.h  data_structure.h  input_process.h  model.h  model_infer_task.h  model_roi_infer_task.h  task.h
dnn_node/include/util/: image_proc.h  image_subscriber.h
dnn_node/include/util/output_parser/: algorithm.h  perception_common.h  utils.h
dnn_node/include/util/output_parser/classification/: ptq_classification_output_parser.h
dnn_node/include/util/output_parser/detection/: fasterrcnn_kps_output_parser.h  fcos_output_parser.h  filter2d_output_parser.h  nms.h  ptq_efficientdet_output_parser.h  ptq_ssd_output_parser.h  ptq_yolo2_output_parser.h  ptq_yolo3_darknet_output_parser.h  ptq_yolo5_output_parser.h
dnn_node/include/util/output_parser/segmentation/: ptq_unet_output_parser.h
dnn_node/include/util/threads/: threadpool.h
dnn_node/src/: dnn_node.cpp  dnn_node_impl.cpp
dnn_node/src/easy_dnn/: input_process.cpp  model.cpp  model_infer_task.cpp  model_roi_infer_task.cpp  task.cpp
dnn_node/src/util/: image_proc.cpp  image_subscriber.cpp
dnn_node/src/util/output_parser/: utils.cpp
dnn_node/src/util/output_parser/classification/: ptq_classification_output_parser.cpp
dnn_node/src/util/output_parser/detection/: facehand_detect_output_parser.cpp  fasterrcnn_kps_output_parser.cpp  fasterrcnn_output_parser.cpp  fcos_output_parser.cpp  filter2d_output_parser.cpp  nms.cpp  ptq_efficientdet_output_parser.cpp  ptq_ssd_output_parser.cpp  ptq_yolo2_output_parser.cpp  ptq_yolo3_darknet_output_parser.cpp  ptq_yolo5_output_parser.cpp  ptq_yolov5x_output_parser.cpp
dnn_node/src/util/output_parser/segmentation/: ptq_unet_output_parser.cpp
dnn_node/src/util/threads/: threadpool.cpp
dnn_node/test/: CMakeLists.txt  test.cpp
dnn_node/test/implementation/: implementation.hpp
dnn_node/test/interface/: interface.hpp
dnn_node_example/: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
dnn_node_example/config/: 960_544.nv12  efficient_det_workconfig.json  efficientnet_lite0_workconfig.json  fcosworkconfig.json  mobilenet_ssd_workconfig.json  mobilenet_unet_workconfig.json  mobilenetv2workconfig.json  multitask_body_kps_960x544.json  yolov2workconfig.json  yolov3workconfig.json  yolov5workconfig.json
dnn_node_example/config/efficient_det/: deleted_nodes_info.txt
dnn_node_example/config/j5/: mobilenetv2workconfig.json  yolov5xworkconfig.json
dnn_node_example/config/rdkultra/: mobilenetv2workconfig.json  yolov5xworkconfig.json
dnn_node_example/config/x3/: 960_544.nv12  efficient_det_workconfig.json  efficientnet_lite0_workconfig.json  fcosworkconfig.json  mobilenet_ssd_workconfig.json  mobilenet_unet_workconfig.json  yolov2workconfig.json  yolov3workconfig.json  yolov5workconfig.json
dnn_node_example/config/x5ultra/: imagenet.list  mobilenetv2workconfig.json  yolov5xworkconfig.json
dnn_node_example/include/: dnn_example_node.h  fasterrcnn_body_det_node.h  image_subscriber.h  image_utils.h
dnn_node_example/include/post_process/: post_process_base.h  post_process_classification.h  post_process_efficientdet.h  post_process_fasterrcnn.h  post_process_fcos.h  post_process_ssd.h  post_process_unet.h  post_process_yolov2.h  post_process_yolov3.h  post_process_yolov5.h
dnn_node_example/launch/: dnn_node_example.launch.py  dnn_node_example_feedback.launch.py  hobot_dnn_node_example.launch.py  hobot_dnn_node_example_feedback.launch.py
dnn_node_example/launch/j5/: hobot_dnn_node_example_j5_feedback.launch.py
dnn_node_example/launch/x3/: hobot_dnn_node_example_feedback.launch.py
dnn_node_example/src/: dnn_example_node.cpp  example.cpp  fasterrcnn_body_det_node.cpp  fasterrcnn_kps_output_parser.cpp  image_subscriber.cpp  image_utils.cpp
dnn_node_example/src/post_process/: post_process_base.cpp  post_process_classification.cpp  post_process_efficientdet.cpp  post_process_fasterrcnn.cpp  post_process_fcos.cpp  post_process_ssd.cpp  post_process_unet.cpp  post_process_yolov2.cpp  post_process_yolov3.cpp  post_process_yolov5.cpp
dnn_node_fcos/: CMakeLists.txt  README.md  package.xml
dnn_node_fcos/config/: detlist.list  fcos_config.json
dnn_node_fcos/include/: fcos_det_node.h  fcos_output_parser.h  image_utils.h
dnn_node_fcos/src/: dnn_fcos_example.cpp  fcos_det_node.cpp  fcos_output_parser.cpp  image_utils.cpp
dnn_node_sample/: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
dnn_node_sample/include/: parser.h
dnn_node_sample/include/dnn_node_sample/: parser.h
dnn_node_sample/launch/: dnn_node_sample.launch.py  hobot_dnn_node_sample.launch.py
dnn_node_sample/src/: parser.cpp  sample.cpp
(+46 files in other folders)
